--- a/index3.html
+++ b/index3.html
@@ -51,19 +51,11 @@
   button:hover {
     background-color: #004a99;
   }
-  #instagramBtn {
-    background-color: #e1306c; /* Instagram pink */
-    margin: 0;
-    color: white;
-  }
-  #instagramBtn:hover {
-    background-color: #b92e58;
-  }
   #map {
     height: 500px;
-    width: 60vw;
+    width: 100vw;
     max-width: 100%;
-    margin: 0 auto 20px auto;
+    margin: 0;
     border-radius: 0;
     box-shadow: none;
   }
@@ -71,15 +63,24 @@
   .mountain-icon {
     width: 22px;
     height: 22px;
-    fill: #0066cc;
+    /* fill settes i SVG-elementet direkte */
   }
 
-  /* Video container uten indre ramme */
+  /* Instagram knapp styling */
+  #instagramBtn {
+    background-color: #e1306c; /* Instagram pink */
+    margin: 0;
+  }
+  #instagramBtn:hover {
+    background-color: #b92e58;
+  }
+  /* Video container med lys bakgrunn og rundede hjørner */
   #instagram-video-container {
     max-width: 960px;
     margin: 30px auto 0 auto;
-    padding: 0;
+    padding: 18px 16px;
     background-color: #fafafa;
+    border: 1.5px solid #ddd;
     border-radius: 14px;
     display: flex;
     justify-content: center;
@@ -91,13 +92,13 @@
     border-radius: 12px;
     overflow: hidden;
     background-color: white;
-    box-shadow: none;
-    padding: 0;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+    padding: 12px;
     box-sizing: border-box;
   }
   .instagram-video-block h2 {
     color: #0066cc;
-    margin: 10px 0 8px 0;
+    margin-bottom: 8px;
     font-size: 18px;
   }
   .instagram-video-block blockquote {
@@ -108,7 +109,7 @@
   @media (max-width: 960px) {
     #instagram-video-container {
       max-width: 100%;
-      padding: 0;
+      padding: 14px 10px;
     }
     .instagram-video-block {
       width: 45vw;
@@ -152,21 +153,21 @@
     </button>
 
     <button data-lat="69.69472" data-lng="18.63642" data-name="Korteidet" aria-label="Show Korteidet location">
-      <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+      <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="white">
         <path d="M12 2L2 20h20L12 2zM12 6.5l5.5 11H6.5L12 6.5z"/>
       </svg>
       Korteidet
     </button>
 
     <button data-lat="69.78386" data-lng="18.78913" data-name="Lyfjorddalen" aria-label="Show Lyfjorddalen location">
-      <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+      <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="white">
         <path d="M12 2L2 20h20L12 2zM12 6.5l5.5 11H6.5L12 6.5z"/>
       </svg>
       Lyfjorddalen
     </button>
 
     <button data-lat="69.65974" data-lng="18.95441" data-name="Valhall" aria-label="Show Valhall location">
-      <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+      <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="white">
         <path d="M12 2L2 20h20L12 2zM12 6.5l5.5 11H6.5L12 6.5z"/>
       </svg>
       Valhall
