--- a/index3.html
+++ b/index3.html
@@ -75,18 +75,18 @@
     background-color: #b92e58;
   }
   /* Video container med lys bakgrunn og rundede hjørner */
-  #instagram-video-container {
-    max-width: 960px;
-    margin: 30px auto 0 auto;
-    padding: 18px 16px;
-    background-color: #fafafa;
-    border: 1.5px solid #ddd;
-    border-radius: 14px;
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
-  }
+#instagram-video-container {
+  max-width: 960px;
+  margin: 30px auto 0 auto;
+  padding: 18px 16px;
+  background-color: #fafafa;
+  border: 3px solid #0066cc;  /* Ytterramme */
+  border-radius: 14px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
   .instagram-video-block {
     width: 300px;
     border-radius: 12px;
