--- a/index4.html
+++ b/index4.html
@@ -63,7 +63,7 @@
   .mountain-icon {
     width: 22px;
     height: 22px;
-    fill: white; /* Samme farge som tekst i knapp */
+    fill: black; /* Endret fra white til svart */
   }
 
   /* Instagram knapp styling */
@@ -80,7 +80,7 @@
     margin: 30px auto 0 auto;
     padding: 18px 16px;
     background-color: #fafafa;
-    border: 1.5px solid #0066cc; /* Kun ytterramme */
+    border: 1.5px solid #ddd; /* Lys grå ramme */
     border-radius: 14px;
     display: flex;
     justify-content: center;
@@ -233,7 +233,7 @@
 
     const mountainIcon = L.divIcon({
       html: `
-        <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="white" aria-hidden="true" focusable="false">
+        <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="black" aria-hidden="true" focusable="false">
           <path d="M12 2L2 20h20L12 2zM12 6.5l5.5 11H6.5L12 6.5z"/>
         </svg>
       `,
