--- a/korteidet.html
+++ b/korteidet.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Korteidet - Kartutsnitt</title>
+<title>Korteidet - Top Rope Solo</title>
 <link
   rel="stylesheet"
   href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -12,57 +12,128 @@
 <style>
   body {
     font-family: Arial, sans-serif;
-    margin: 20px;
+    background-color: #f0f4f8;
+    color: #333;
+    margin: 0;
+    padding: 20px 10px 40px;
+  }
+  #buttons {
+    margin-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 12px;
+  }
+  button {
+    background-color: #0066cc;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    padding: 12px 20px;
+    cursor: pointer;
+    font-size: 17px;
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    transition: background-color 0.3s;
+  }
+  button:hover {
+    background-color: #004a99;
+  }
+  /* Fjell-ikon stil */
+  .mountain-icon {
+    width: 22px;
+    height: 22px;
+    fill: black;
+  }
+
+  #map-container {
     display: flex;
     align-items: flex-start;
-    gap: 24px;
+    gap: 20px;
+    max-width: 100vw;
+    padding-top: 10px;
   }
   #map {
     width: 20vw;
-    height: 20vw; /* kvadratisk */
-    min-width: 200px; /* for å unngå for liten på smale skjermer */
-    min-height: 200px;
+    aspect-ratio: 1 / 1; /* kvadratisk */
     border: 1.5px solid #ddd;
-    border-radius: 12px;
+    border-radius: 8px;
   }
-  #info {
+  #text-content {
     max-width: 60vw;
+    text-align: left;
   }
-  #info h1 {
-    margin-top: 0;
+  #text-content h1 {
     color: #0066cc;
+    margin-bottom: 12px;
+    font-size: 28px;
   }
-  #info p {
+  #text-content p {
     font-size: 18px;
-    color: #444;
     line-height: 1.5;
+    color: #444;
   }
-  @media (max-width: 700px) {
-    body {
+
+  @media (max-width: 800px) {
+    #map-container {
       flex-direction: column;
       align-items: center;
     }
     #map {
-      width: 60vw;
-      height: 60vw;
-      min-width: unset;
-      min-height: unset;
+      width: 80vw;
+      margin-bottom: 20px;
     }
-    #info {
+    #text-content {
       max-width: 90vw;
-      margin-top: 20px;
     }
   }
 </style>
 </head>
 <body>
-  <div id="map"></div>
-  <div id="info">
-    <h1>Korteidet</h1>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </p>
+  <div id="buttons">
+    <button id="overviewBtn" aria-label="Show all locations">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="white" height="20" width="20" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+      </svg>
+      Show all
+    </button>
+
+    <button data-lat="69.69472" data-lng="18.63642" data-name="Korteidet" aria-label="Show Korteidet location">
+      <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M12 2L2 20h20L12 2zM12 6.5l5.5 11H6.5L12 6.5z"/>
+      </svg>
+      Korteidet
+    </button>
+
+    <button data-lat="69.78386" data-lng="18.78913" data-name="Lyfjorddalen" aria-label="Show Lyfjorddalen location">
+      <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M12 2L2 20h20L12 2zM12 6.5l5.5 11H6.5L12 6.5z"/>
+      </svg>
+      Lyfjorddalen
+    </button>
+
+    <button data-lat="69.65974" data-lng="18.95441" data-name="Valhall" aria-label="Show Valhall location">
+      <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M12 2L2 20h20L12 2zM12 6.5l5.5 11H6.5L12 6.5z"/>
+      </svg>
+      Valhall
+    </button>
+
+    <button id="instagramBtn" aria-label="Instagram profile Rope Solo Man">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 2A3.75 3.75 0 004 7.75v8.5A3.75 3.75 0 007.75 20h8.5a3.75 3.75 0 003.75-3.75v-8.5A3.75 3.75 0 0016.25 4h-8.5zM12 7a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm4.5-3.5a1.25 1.25 0 110 2.5 1.25 1.25 0 010-2.5z"/>
+      </svg>
+      Rope Solo Man
+    </button>
+  </div>
+
+  <div id="map-container">
+    <div id="map"></div>
+    <div id="text-content">
+      <h1>Korteidet</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sodales, lorem in tincidunt vulputate, purus enim dapibus quam, ut convallis libero enim a enim. Nullam dignissim eros nec magna cursus, nec varius quam cursus.</p>
+    </div>
   </div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
@@ -77,7 +148,7 @@
 
     const mountainIcon = L.divIcon({
       html: `
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="black" aria-hidden="true" focusable="false">
+        <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="black" aria-hidden="true" focusable="false">
           <path d="M12 2L2 20h20L12 2zM12 6.5l5.5 11H6.5L12 6.5z"/>
         </svg>
       `,
@@ -87,7 +158,29 @@
       popupAnchor: [0, -22]
     });
 
-    L.marker([69.69472, 18.63642], { icon: mountainIcon }).addTo(map).bindPopup('<strong>Korteidet</strong>').openPopup();
+    L.marker([69.69472, 18.63642], { icon: mountainIcon }).addTo(map).bindPopup('<strong>Korteidet</strong>');
+
+    // Knapp-funksjoner for å navigere til de forskjellige sidene/handlingene:
+    const buttons = document.querySelectorAll('#buttons button[data-name]');
+    buttons.forEach(button => {
+      button.addEventListener('click', () => {
+        const lat = button.getAttribute('data-lat');
+        const lng = button.getAttribute('data-lng');
+        const name = button.getAttribute('data-name');
+
+        // Når man klikker på knappene her kan vi for eksempel navigere til index4.html med query eller andre sider:
+        // Men her gjør vi bare et alert for demo:
+        alert(`Navigasjon til kart for: ${name} (lat: ${lat}, lng: ${lng})`);
+      });
+    });
+
+    document.getElementById('overviewBtn').addEventListener('click', () => {
+      alert('Navigasjon til oversiktskart');
+    });
+
+    document.getElementById('instagramBtn').addEventListener('click', () => {
+      window.open('https://www.instagram.com/rope.solo.man/', '_blank');
+    });
   </script>
 </body>
 </html>
