--- a/korteidet.html
+++ b/korteidet.html
@@ -46,6 +46,12 @@
     height: 22px;
     fill: black;
   }
+  /* Pil-ikon stil (hvit) */
+  .back-icon {
+    width: 20px;
+    height: 20px;
+    fill: white;
+  }
 
   #map-container {
     display: flex;
@@ -92,32 +98,11 @@
 </head>
 <body>
   <div id="buttons">
-    <button id="overviewBtn" aria-label="Show all locations">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="white" height="20" width="20" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-        <path d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+    <button id="backBtn" aria-label="Back to overview">
+      <svg class="back-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z" />
       </svg>
-      Show all
-    </button>
-
-    <button data-lat="69.69472" data-lng="18.63642" data-name="Korteidet" aria-label="Show Korteidet location">
-      <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-        <path d="M12 2L2 20h20L12 2zM12 6.5l5.5 11H6.5L12 6.5z"/>
-      </svg>
-      Korteidet
-    </button>
-
-    <button data-lat="69.78386" data-lng="18.78913" data-name="Lyfjorddalen" aria-label="Show Lyfjorddalen location">
-      <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-        <path d="M12 2L2 20h20L12 2zM12 6.5l5.5 11H6.5L12 6.5z"/>
-      </svg>
-      Lyfjorddalen
-    </button>
-
-    <button data-lat="69.65974" data-lng="18.95441" data-name="Valhall" aria-label="Show Valhall location">
-      <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-        <path d="M12 2L2 20h20L12 2zM12 6.5l5.5 11H6.5L12 6.5z"/>
-      </svg>
-      Valhall
+      Back to overview
     </button>
 
     <button id="instagramBtn" aria-label="Instagram profile Rope Solo Man">
@@ -160,24 +145,12 @@
 
     L.marker([69.69472, 18.63642], { icon: mountainIcon }).addTo(map).bindPopup('<strong>Korteidet</strong>');
 
-    // Knapp-funksjoner for å navigere til de forskjellige sidene/handlingene:
-    const buttons = document.querySelectorAll('#buttons button[data-name]');
-    buttons.forEach(button => {
-      button.addEventListener('click', () => {
-        const lat = button.getAttribute('data-lat');
-        const lng = button.getAttribute('data-lng');
-        const name = button.getAttribute('data-name');
-
-        // Når man klikker på knappene her kan vi for eksempel navigere til index4.html med query eller andre sider:
-        // Men her gjør vi bare et alert for demo:
-        alert(`Navigasjon til kart for: ${name} (lat: ${lat}, lng: ${lng})`);
-      });
+    // Gå tilbake til index.html ved klikk på back-knapp
+    document.getElementById('backBtn').addEventListener('click', () => {
+      window.location.href = 'index.html';
     });
 
-    document.getElementById('overviewBtn').addEventListener('click', () => {
-      alert('Navigasjon til oversiktskart');
-    });
-
+    // Åpne instagram i ny fane
     document.getElementById('instagramBtn').addEventListener('click', () => {
       window.open('https://www.instagram.com/rope.solo.man/', '_blank');
     });
