--- a/index4.html
+++ b/index4.html
@@ -207,7 +207,7 @@
         name: 'Korteidet',
         lat: 69.69472,
         lng: 18.63642,
-        popup: '<strong>Korteidet</strong><br>More info coming.<br><a href="https://klatreforer.tromsoklatring.no/area/3062" target="_blank" rel="noopener noreferrer">Climbingarea - Korteidet</a>'
+        popup: '<strong><a href="korteidet.html" style="color:#0066cc; text-decoration:none;">Korteidet</a></strong><br>More info coming.<br><a href="https://klatreforer.tromsoklatring.no/area/3062" target="_blank" rel="noopener noreferrer">Climbingarea - Korteidet</a>'
       },
       {
         name: 'Lyfjorddalen',
