--- a/valhall.html
+++ b/valhall.html
@@ -143,7 +143,7 @@
       popupAnchor: [0, -22]
     });
 
-    L.marker([69.65974, 18.95441], { icon: mountainIcon }).addTo(map).bindPopup('<strong><a href="valhall.html">Valhall</a></strong>');
+    L.marker([69.65974, 18.95441], { icon: mountainIcon }).addTo(map).bindPopup('<strong>Valhall</strong>');
 
     // Gå tilbake til index.html ved klikk på back-knapp
     document.getElementById('backBtn').addEventListener('click', () => {
