--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@ const locations = [
     name: 'Korteidet',
     lat: 69.69472,
     lng: 18.63642,
-    popup: `<strong><a href="korteidet.html" target="_blank" rel="noopener noreferrer">Korteidet</a></strong><br>
+    popup: `<strong><a href="korteidet.html">Korteidet</a></strong><br>
             More info coming.<br>
-            <a href="https://klatreforer.tromsoklatring.no/area/3062" target="_blank" rel="noopener noreferrer">Climbingarea - Korteidet</a>`
+            <a href="https://klatreforer.tromsoklatring.no/area/3062">Climbingarea - Korteidet</a>`
   },
   {
     name: 'Lyfjorddalen',
