--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@ const locations = [
     lng: 18.63642,
     popup: `<strong><a href="korteidet.html">Korteidet</a></strong><br>
             More info coming.<br>
-            <a href="https://klatreforer.tromsoklatring.no/area/3062">Climbingarea - Korteidet</a>`
+            <a href="https://klatreforer.tromsoklatring.no/area/3062"  target="_blank" rel="noopener noreferrer">Climbingarea - Korteidet</a>`
   },
   {
     name: 'Lyfjorddalen',
     lat: 69.78386,
     lng: 18.78913,
-    popup: `<strong><a href="lyfjorddalen.html" target="_blank" rel="noopener noreferrer">Lyfjorddalen</a></strong><br>
+    popup: `<strong><a href="lyfjorddalen.html">Lyfjorddalen</a></strong><br>
             More info coming.<br>
             <a href="https://klatreforer.tromsoklatring.no/area/2868" target="_blank" rel="noopener noreferrer">Climbingarea - Lyfjorddalen</a>`
   },
@@ -223,7 +223,7 @@ const locations = [
     name: 'Valhall',
     lat: 69.65974,
     lng: 18.95441,
-    popup: `<strong><a href="valhall.html" target="_blank" rel="noopener noreferrer">Valhall</a></strong><br>
+    popup: `<strong><a href="valhall.html">Valhall</a></strong><br>
             More info coming.`
   }
 ];
