--- a/korteidet.html
+++ b/korteidet.html
@@ -155,7 +155,7 @@
       <!-- Avsnitt 1 -->
       <div class="section">
         <div class="section-header">
-          <img src="https://larsgimse.github.io/topropesolo/pic/klatring.jpg" alt="Bilde av Avsnitt 1" class="section-image popup-image" data-full="https://larsgimse.github.io/topropesolo/klatring.jpg" />
+          <img src="https://larsgimse.github.io/topropesolo/pic/klatring.jpg" alt="Bilde av Avsnitt 1" class="section-image popup-image" data-full="https://larsgimse.github.io/topropesolo/pic/klatring.jpg" />
         </div>
         <div class="text-content">
           <h2>Avsnitt 1</h2>
@@ -168,7 +168,7 @@
       <!-- Avsnitt 2 - bilde på høyre side -->
       <div class="section reverse">
         <div class="section-header">
-          <img src="https://larsgimse.github.io/topropesolo/pic/klatring.jpg" alt="Bilde av Avsnitt 2" class="section-image popup-image" data-full="https://larsgimse.github.io/topropesolo/klatring.jpg" />
+          <img src="https://larsgimse.github.io/topropesolo/pic/klatring.jpg" alt="Bilde av Avsnitt 2" class="section-image popup-image" data-full="https://larsgimse.github.io/topropesolo/pic/klatring.jpg" />
         </div>
         <div class="text-content">
           <h2>Avsnitt 2</h2>
@@ -181,7 +181,7 @@
       <!-- Avsnitt 3 -->
       <div class="section">
         <div class="section-header">
-          <img src="https://larsgimse.github.io/topropesolo/pic/klatring.jpg" alt="Bilde av Avsnitt 3" class="section-image popup-image" data-full="https://larsgimse.github.io/topropesolo/klatring.jpg" />
+          <img src="https://larsgimse.github.io/topropesolo/pic/klatring.jpg" alt="Bilde av Avsnitt 3" class="section-image popup-image" data-full="https://larsgimse.github.io/topropesolo/pic/klatring.jpg" />
         </div>
         <div class="text-content">
           <h2>Avsnitt 3</h2>
